--- a/websocket/example_cfg.yaml
+++ b/websocket/example_cfg.yaml
@@ -1,7 +1,7 @@
 local:
     server_port: 8000
     buffer: 16 # 单次数据包的最大大小：Kb
-    client_id: 'sox'
+    client_id: 'sox-any'
     websocket_uri: "ws://127.0.0.1:9000/handle_websocket/"
     num_ws_connections: 1 # 同时保持的websocket连接数目, 目前看来提升websocket连接数目并不会提高速度？
     retry: 1 # websocket断线重连尝试次数
@@ -10,5 +10,5 @@ remote:
     buffer: 16 # 单次数据包的最大大小Kb
     websocket_port: 9000
     clients: # 允许的客户端
-        ['sox', 'sox-test']
+        ['sox']
 
